src/pages/Landing/sections/Header/index.styl
@import '~styles/animations.styl'

.header
  height 100vh
  overflow hidden
  background-image linear-gradient(-180deg, rgba(0,84,255,0.00) 0%, rgba(0,77,255,0.10) 100%)
  animation shadeIn .8s ease-out forwards
  animation-delay 1.2s

  +iphone()
    padding 40px
    background url(/images/main-art-mobile@2x.png) center bottom no-repeat
    background-size 100% auto
    height auto

  .content
    display flex
    flex-direction row
    max-width 1160px
    margin 0 auto
    height 100%
    position relative
    align-items center
    padding 48px 32px 0

    +iphone()
      padding 0
      max-width 100%
      width 100%
      padding-top 0
      display block

    .content-info
      display flex
      flex-direction column
      justify-content center
      min-height 560px
      width 440px

      +iphone()
        width 100%
        margin 0
        display block
        margin-top 16px

      .heading
        +iphone()
          margin 24px 0

        .sub-title
          color rgba(0,0,0, .4)
          font-weight 400

      .paragraph
        opacity 0.8

        +iphone()
          opacity 0.6
          line-height 2

      .title
        +iphone()
          font-size 21px
          line-height 1.5
          margin-bottom 16px

      .buttons
        display flex
        margin-top 38px

        iphoneDisabled()

        .explore-btn
          margin-right 32px

          svg
            margin-top 1px

